--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -1,90 +1,96 @@
 {
-   "es": {
-      "home": "Inicio",
-      "about": "Sobre mi",
-      "project": "Proyectos",
-      "publications": "Publicaciones",
-      "contact": "Contacto",
-      "Languages": "Idiomas",
-      "Download": "Descargar CV",
-      "more": "Leer mas",
-      "title1": "Hola, soy Melissa Orellana",
-      "title2": "Estudiante de ingenieria en Sistema",
-      "title3": "Sobre mí",
-      "title4": "Melissa Estefania Diaz Orellana",
-      "title5": "Estudiante de ingeniería en sistemas y redes informáticas, actualmente cursa el cuarto año de la carrera, ha aprendido sobre gestión de proyectos y sigue ampliando su aprendizaje, también un poco sobre desarrollo web, le interesa la maquetación de sitios y aplicaciones web. También tiene conocimientos básicos sobre circuitos electrónicos y robótica, conocimientos de creación y administración de bases de datos SQL y NoSQL como: MySQL Server, SQL server, Oracle, Casandra DB. Tiene conocimientos básicos de lo que es el modelado y la animación por ordenador. Tiene muchas metas propuestas pero la principal por ahora es graduarse en ingeniería en sistemas informáticos y redes y poder desempeñarse en el ámbito laboral",
-      "title6": "Publicaciones",
-      "title7": "A continuación estarán algunos documentos o ensayos en los que he contribuido para algunos proyectos.",
-      "title8": "Diseño web",
-      "title9": "El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web. No es simplemente la implementación del diseño convencional ya que se abarcan diferentes aspectos como el diseño gráfico web, diseño de interfaz y experiencia de usuario, como la navegabilidad, interactividad, usabilidad, arquitectura de la información.",
-      "title10": "Desarrollo web",
-      "title11": "Desarrollo web es un término que define la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías de software del lado del servidor y del cliente que involucran una combinación de procesos de base de datos con el uso de un navegador web a fin de realizar determinadas tareas o mostrar información.",
-      "title12": "Aplicación Android",
-      "title13": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-      "title14": "Fotografía",
-      "title15": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-      "title16": "Redacción de contenido",
-      "title17": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-      "title18": "Edición de video",
-      "title19": "",
-      "title20": "Proyectos",
-      "title21": "Agro Producers",
-      "title22": "Forme parte del área de gestión en el desarrollo del proyecto el cual está basado para ayudar a los productores agrícolas a poder comercializar sus productos mediante la app web y que los usuarios puedan ingresar hacer sus compras.",
-      "title23": "Generador de energía ",
-      "title24": "Creación desde cero de la fuente de energía la cual se realizó en las prácticas de la materia electrónica análoga en la cual participe en su creación ya que fue creada por un grupo de trabajo del cual forme parte.",
-      "title25": "DevEvaluación",
-      "title28": "Forme parte del área de gestión en el desarrollo del proyecto el cual está basado en la evaluación de historias de usuarios con estándares ISO 25010.",
-      "title29": "Contacta conmigo",
-      "title30": "",
-      "title31": "Datos de contacto",
-      "title32": "Dirección",
-      "title33": "Teléfono",
-      "title34": "Correo electrónico",
-      "title35": "Envia un mensaje",
-      "Testimonials": "Testimoniales"
-   },
-   "en": {
-      "home": "Home",
-      "about": "about",
-      "Project": "Project ",
-      "publications": "publications",
-      "contact": "Contact",
-      "Languages": "Languages",
-      "Download": "Download CV",
-      "more": "Read More",
-      "title1": "Hello, I'm Melissa Orellana",
-      "title2": "Student of System Engineering",
-      "title3": "About me ",
-      "title4": "Melissa Estefania Diaz Orellana",
-      "title5": "Student of systems engineering and computer networks, currently in the fourth year of the race, has learned about project management and continues to expand his learning, also a little about web development, he is interested in the layout of web sites and web applications. He also has basic knowledge about electronic circuits and robotics, knowledge of creation and administration of SQL and NoSQL databases such as: MySQL Server, SQL server, Oracle, Casandra DB. He has basic knowledge of computer modeling and animation. He has many proposed goals but the main one for now is to graduate in computer systems and network engineering and to be able to perform in the workplace.",
-      "title6": "publications",
-      "title7": "Below are some of the papers or essays I have contributed to projects.",
-      "title8": "Web Disign",
-      "title9": "Web design is an activity that consists of the planning, design, implementation and maintenance of websites. It is not simply the implementation of conventional design since different aspects such as web graphic design, interface design and user experience are covered, such as navigability, interactivity, usability, information architecture.",
-      "title10": "Web Development",
-      "title11": "Web development is a term that defines the creation of websites for the Internet or an intranet. To achieve this, use is made of software technologies on the server and client sides that involve a combination of database processes with the use of a web browser in order to perform certain tasks or display information.",
-      "title12": "Android App",
-      "title13": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-      "title14": "Photography",
-      "title15": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-      "title16": "Content Writing",
-      "title17": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-      "title18": "Video Editing",
-      "title19": "",
-      "title20": "Projects",
-      "title21": "Agro Producers",
-      "title22": "Be part of the management area in the development of the project which is based to help agricultural producers to be able to market their products through the web app and that users can enter to make their purchases.",
-      "title23": "Energy generator",
-      "title24": "Creation from scratch of the energy source which was carried out in the practices of the analog electronic matter in which I participated in its creation since it was created by a working group of which it is part.",
-      "title25": "DevEvaluation",
-      "title28": "Be part of the management area in the development of the project which is based on the evaluation of user stories with ISO 25010 standards.",
-      "title29": "Contact Me",
-      "title30": "",
-      "title31": "Contact Info",
-      "title32": "Address",
-      "title33": "Phome",
-      "title34": "Email",
-      "title35": "Message Me",
-      "Testimonials": "Testimonials"
-   }
+	"es": {
+		"home": "Inicio",
+		"about": "Sobre mi",
+		"project": "Proyectos",
+		"publications": "Publicaciones",
+		"contact": "Contacto",
+		"Languages": "Idiomas",
+		"Download": "Descargar CV",
+		"more": "Leer mas",
+		"title1": "Hola, soy Melissa Orellana",
+		"title2": "Estudiante de ingenieria en Sistema",
+		"title3": "Sobre mí",
+		"title4": "Melissa Estefania Diaz Orellana",
+		"title5": "Estudiante de ingeniería en sistemas y redes informáticas, actualmente cursa el cuarto año de la carrera, ha aprendido sobre gestión de proyectos y sigue ampliando su aprendizaje, también un poco sobre desarrollo web, le interesa la maquetación de sitios y aplicaciones web. También tiene conocimientos básicos sobre circuitos electrónicos y robótica, conocimientos de creación y administración de bases de datos SQL y NoSQL como: MySQL Server, SQL server, Oracle, Casandra DB. Tiene conocimientos básicos de lo que es el modelado y la animación por ordenador. Tiene muchas metas propuestas pero la principal por ahora es graduarse en ingeniería en sistemas informáticos y redes y poder desempeñarse en el ámbito laboral",
+		"title6": "Publicaciones",
+		"title7": "A continuación estarán algunos documentos o ensayos en los que he contribuido para algunos proyectos.",
+		"title8": "Diseño web",
+		"title9": "El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web. No es simplemente la implementación del diseño convencional ya que se abarcan diferentes aspectos como el diseño gráfico web, diseño de interfaz y experiencia de usuario, como la navegabilidad, interactividad, usabilidad, arquitectura de la información.",
+		"title10": "Desarrollo web",
+		"title11": "Desarrollo web es un término que define la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías de software del lado del servidor y del cliente que involucran una combinación de procesos de base de datos con el uso de un navegador web a fin de realizar determinadas tareas o mostrar información.",
+		"title12": "Aplicación Android",
+		"title13": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+		"title14": "Fotografía",
+		"title15": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+		"title16": "Redacción de contenido",
+		"title17": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+		"title18": "Edición de video",
+		"title19": "",
+		"title20": "Proyectos",
+		"title21": "Agro Producers",
+		"title22": "Forme parte del área de gestión en el desarrollo del proyecto el cual está basado para ayudar a los productores agrícolas a poder comercializar sus productos mediante la app web y que los usuarios puedan ingresar hacer sus compras.",
+		"title23": "Generador de energía ",
+		"title24": "Creación desde cero de la fuente de energía la cual se realizó en las prácticas de la materia electrónica análoga en la cual participe en su creación ya que fue creada por un grupo de trabajo del cual forme parte.",
+		"title25": "DevEvaluación",
+		"title28": "Forme parte del área de gestión en el desarrollo del proyecto el cual está basado en la evaluación de historias de usuarios con estándares ISO 25010.",
+		"title29": "Contacta conmigo",
+		"title30": "",
+		"title31": "Datos de contacto",
+		"title32": "Dirección",
+		"title33": "Teléfono",
+		"title34": "Correo electrónico",
+		"title35": "Envia un mensaje",
+		"Testimonials": "Testimoniales",
+		"testimonio1": "Meli es una persona inteligente, amigable con quien puedo contar, responsable a la hora de trabajar y decidida a cumplir con sus metas y objetivos, cuenta con muchas habilidades y entre ella se destaca en el área de diseño.",
+		"uvsText": "Proyecto que esta en proceso de desarrollo, esta es una aplicacion web que su finalidad esta basada en los niños y adolescentes que esten o conoscan alguien que este viviendo maltrato para que dicha app pueda de alguna forma cocientizarlos",
+		"vstHeader": "Una Vida de Seguridad (UVS)"
+	},
+	"en": {
+		"home": "Home",
+		"about": "about",
+		"Project": "Project ",
+		"publications": "publications",
+		"contact": "Contact",
+		"Languages": "Languages",
+		"Download": "Download CV",
+		"more": "Read More",
+		"title1": "Hello, I'm Melissa Orellana",
+		"title2": "Student of System Engineering",
+		"title3": "About me ",
+		"title4": "Melissa Estefania Diaz Orellana",
+		"title5": "Student of systems engineering and computer networks, currently in the fourth year of the race, has learned about project management and continues to expand his learning, also a little about web development, he is interested in the layout of web sites and web applications. He also has basic knowledge about electronic circuits and robotics, knowledge of creation and administration of SQL and NoSQL databases such as: MySQL Server, SQL server, Oracle, Casandra DB. He has basic knowledge of computer modeling and animation. He has many proposed goals but the main one for now is to graduate in computer systems and network engineering and to be able to perform in the workplace.",
+		"title6": "publications",
+		"title7": "Below are some of the papers or essays I have contributed to projects.",
+		"title8": "Web Disign",
+		"title9": "Web design is an activity that consists of the planning, design, implementation and maintenance of websites. It is not simply the implementation of conventional design since different aspects such as web graphic design, interface design and user experience are covered, such as navigability, interactivity, usability, information architecture.",
+		"title10": "Web Development",
+		"title11": "Web development is a term that defines the creation of websites for the Internet or an intranet. To achieve this, use is made of software technologies on the server and client sides that involve a combination of database processes with the use of a web browser in order to perform certain tasks or display information.",
+		"title12": "Android App",
+		"title13": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+		"title14": "Photography",
+		"title15": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+		"title16": "Content Writing",
+		"title17": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+		"title18": "Video Editing",
+		"title19": "",
+		"title20": "Projects",
+		"title21": "Agro Producers",
+		"title22": "Be part of the management area in the development of the project which is based to help agricultural producers to be able to market their products through the web app and that users can enter to make their purchases.",
+		"title23": "Energy generator",
+		"title24": "Creation from scratch of the energy source which was carried out in the practices of the analog electronic matter in which I participated in its creation since it was created by a working group of which it is part.",
+		"title25": "DevEvaluation",
+		"title28": "Be part of the management area in the development of the project which is based on the evaluation of user stories with ISO 25010 standards.",
+		"title29": "Contact Me",
+		"title30": "",
+		"title31": "Contact Info",
+		"title32": "Address",
+		"title33": "Phome",
+		"title34": "Email",
+		"title35": "Message Me",
+		"Testimonials": "Testimonials",
+		"testimonio1": "Meli is an intelligent, friendly person whom I can count on, responsible when it comes to working and determined to meet her goals and objectives, she has many skills and among her she stands out in the area of ​​design.",
+		"uvsText": "Project that is in the process of development, this is a web application that its purpose is based on children and adolescents who are or know someone who is experiencing abuse so that this app can in some way make them aware",
+		"vstHeader": "A Lifetime of Safety (UVS)"
+	}
 }
