--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -44,7 +44,8 @@
 		"Testimonials": "Testimoniales",
 		"testimonio1": "Meli es una persona inteligente, amigable con quien puedo contar, responsable a la hora de trabajar y decidida a cumplir con sus metas y objetivos, cuenta con muchas habilidades y entre ella se destaca en el área de diseño.",
 		"uvsText": "Proyecto que esta en proceso de desarrollo, esta es una aplicacion web que su finalidad esta basada en los niños y adolescentes que esten o conoscan alguien que este viviendo maltrato para que dicha app pueda de alguna forma cocientizarlos",
-		"vstHeader": "Una Vida de Seguridad (UVS)"
+		"vstHeader": "Una Vida de Seguridad (UVS)",
+		"chepe": "Melissa es una persona muy puntual y responsable que no permite que un simple obstáculo la detenga de cumplir sus metas siempre busca la manera de afrontarlos de la mejor forma posible y no teme pedir ayuda si la necesita además es muy buena diseñando presentaciones, combinando colores y es muy buena lectora"
 	},
 	"en": {
 		"home": "Home",
@@ -91,6 +92,7 @@
 		"Testimonials": "Testimonials",
 		"testimonio1": "Meli is an intelligent, friendly person whom I can count on, responsible when it comes to working and determined to meet her goals and objectives, she has many skills and among her she stands out in the area of ​​design.",
 		"uvsText": "Project that is in the process of development, this is a web application that its purpose is based on children and adolescents who are or know someone who is experiencing abuse so that this app can in some way make them aware",
-		"vstHeader": "A Lifetime of Safety (UVS)"
+		"vstHeader": "A Lifetime of Safety (UVS)",
+		"chepe": "Melissa is a very punctual and responsible person who does not allow a simple obstacle to stop her from meeting her goals, she always looks for the way to face them in the best possible way and is not afraid to ask for help if she needs it, she is also very good at designing presentations, combining colors and she is a very good reader"
 	}
 }
