--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -45,7 +45,10 @@
 		"testimonio1": "Meli es una persona inteligente, amigable con quien puedo contar, responsable a la hora de trabajar y decidida a cumplir con sus metas y objetivos, cuenta con muchas habilidades y entre ella se destaca en el área de diseño.",
 		"uvsText": "Proyecto que esta en proceso de desarrollo, esta es una aplicacion web que su finalidad esta basada en los niños y adolescentes que esten o conoscan alguien que este viviendo maltrato para que dicha app pueda de alguna forma cocientizarlos",
 		"vstHeader": "Una Vida de Seguridad (UVS)",
-		"chepe": "Melissa es una persona muy puntual y responsable que no permite que un simple obstáculo la detenga de cumplir sus metas siempre busca la manera de afrontarlos de la mejor forma posible y no teme pedir ayuda si la necesita además es muy buena diseñando presentaciones, combinando colores y es muy buena lectora"
+		"chepe": "Melissa es una persona muy puntual y responsable que no permite que un simple obstáculo la detenga de cumplir sus metas siempre busca la manera de afrontarlos de la mejor forma posible y no teme pedir ayuda si la necesita además es muy buena diseñando presentaciones, combinando colores y es muy buena lectora",
+		"primo": "Melissa es una persona  responsable y amable que nunca te defraudara. Siempre se centra en los proyectos que desarrolla y es muy buena  diseñadora y con ella se hace un equipo genial",
+		"jonathan": "Melissa es una persona carismatica, responsable y puntual, no deja que nada ni nadie la detenga. siempre esta dispuesta a dar todo por conseguir sus sueños. Es una persona totalmente segura de si misma que ha superado derrotas, que en cada caida se levanto con ganas de comerse al mundo y no rendirce nunca. Porque el exito llega a quienes tienen un compromiso inquebrantable dew mantenerlo asi hasta el final",
+		"yasmin": "Melissa es una persona con muchas cualidades  durante el tiemo que tengo de conocerla  me e dado cuenta que es una persona confiable respetuosa que es amistosa una excelente persona tanto en lo academico como en lo personal es muy responsable a sus tareas y actividades y doy fe quee es una persona eeen quien se puede establecer un lazo muy fuerte de trabajo y confianza"
 	},
 	"en": {
 		"home": "Home",
@@ -93,6 +96,10 @@
 		"testimonio1": "Meli is an intelligent, friendly person whom I can count on, responsible when it comes to working and determined to meet her goals and objectives, she has many skills and among her she stands out in the area of ​​design.",
 		"uvsText": "Project that is in the process of development, this is a web application that its purpose is based on children and adolescents who are or know someone who is experiencing abuse so that this app can in some way make them aware",
 		"vstHeader": "A Lifetime of Safety (UVS)",
-		"chepe": "Melissa is a very punctual and responsible person who does not allow a simple obstacle to stop her from meeting her goals, she always looks for the way to face them in the best possible way and is not afraid to ask for help if she needs it, she is also very good at designing presentations, combining colors and she is a very good reader"
+		"chepe": "Melissa is a very punctual and responsible person who does not allow a simple obstacle to stop her from meeting her goals, she always looks for the way to face them in the best possible way and is not afraid to ask for help if she needs it, she is also very good at designing presentations, combining colors and she is a very good reader",
+
+		"primo": "Melissa is a responsible and kind person who will never let you down. She always focuses on the projects she develops and is a very good designer and with her she makes a great team",
+		"jonathan": "Melissa is a charismatic, responsible and punctual person, she does not let anything or anyone stop her. She is always willing to give everything to achieve her dreams. He is a totally self-confident person who has overcome defeats, who in each fall woke up wanting to eat the world and never gives up. Because success comes to those who have an unbreakable commitment to keep it that way until the end",
+		"yasmin": "Melissa is a person with many qualities during the time that I have known her, I have realized that she is a trustworthy, respectful person who is friendly, an excellent person both academically and personally, is very responsible for her tasks and activities and I attest that she is is a person in whom a very strong bond of work and trust can be established"
 	}
 }
