--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -1,5 +1,14 @@
 {
 	"es": {
+		"duras": "Habilidades Duras",
+		"manejo": "Manejo basico de gestion de trabajo en proyecto",
+		"respetuosa": "Respetuosa a sus mayores",
+		"sql": "Manejo basico de base de datos SQL y NOSQL",
+		"blandas": "Habilidades Blandas",
+		"creacion": "Creacion de Redes",
+		"redes": "Conocimientos en administracion de redes",
+		"hablar": "Hablar en publico",
+		"progra": "Conocimiento muy basico de programacion",
 		"home": "Inicio",
 		"about": "Sobre mi",
 		"project": "Proyectos",
@@ -12,7 +21,7 @@
 		"title2": "Estudiante de ingenieria en Sistema",
 		"title3": "Sobre mí",
 		"title4": "Melissa Estefania Diaz Orellana",
-		"title5": "Estudiante de ingeniería en sistemas y redes informáticas, actualmente cursa el cuarto año de la carrera, ha aprendido sobre gestión de proyectos y sigue ampliando su aprendizaje, también un poco sobre desarrollo web, le interesa la maquetación de sitios y aplicaciones web. También tiene conocimientos básicos sobre circuitos electrónicos y robótica, conocimientos de creación y administración de bases de datos SQL y NoSQL como: MySQL Server, SQL server, Oracle, Casandra DB. Tiene conocimientos básicos de lo que es el modelado y la animación por ordenador. Tiene muchas metas propuestas pero la principal por ahora es graduarse en ingeniería en sistemas informáticos y redes y poder desempeñarse en el ámbito laboral",
+		"title5": "Melissa Orellana estudiante de ingenieria en sistemas y redes informáticas, es una persona que le gusta mucho el diseño siendo esta su principal virtud en la cual se destaca bastante aunque tenga conocimientos basicos sobre administracion de base de datos, redes tambien sobre electronica y robotica, le interesa la maquetacion web. Tambien cabe destacar es una persona que le apasiona leer libros siendo este uno de sus pasa tiempos preferidos. Ella es una persona comprometida con lo que hace y quiere formarse en su carrera para desenvolverse en el ámbito laboral.",
 		"title6": "Publicaciones",
 		"title7": "A continuación estarán algunos documentos o ensayos en los que he contribuido para algunos proyectos.",
 		"title8": "Diseño web",
@@ -51,6 +60,15 @@
 		"yasmin": "Melissa es una persona con muchas cualidades  durante el tiemo que tengo de conocerla  me e dado cuenta que es una persona confiable respetuosa que es amistosa una excelente persona tanto en lo academico como en lo personal es muy responsable a sus tareas y actividades y doy fe quee es una persona eeen quien se puede establecer un lazo muy fuerte de trabajo y confianza"
 	},
 	"en": {
+		"duras": "Hard Skills",
+		"manejo": "Basic management of project work management",
+		"respetuosa": "Respectful to their elders",
+		"sql": "Basic handling of SQL and NOSQL databases",
+		"blandas": "Soft Skills",
+		"creacion": "Network Creation",
+		"redes": "Knowledge in network administration",
+		"hablar": "Public speaking",
+		"progra": "Very basic knowledge of programming",
 		"home": "Home",
 		"about": "about",
 		"Project": "Project ",
@@ -63,7 +81,7 @@
 		"title2": "Student of System Engineering",
 		"title3": "About me ",
 		"title4": "Melissa Estefania Diaz Orellana",
-		"title5": "Student of systems engineering and computer networks, currently in the fourth year of the race, has learned about project management and continues to expand his learning, also a little about web development, he is interested in the layout of web sites and web applications. He also has basic knowledge about electronic circuits and robotics, knowledge of creation and administration of SQL and NoSQL databases such as: MySQL Server, SQL server, Oracle, Casandra DB. He has basic knowledge of computer modeling and animation. He has many proposed goals but the main one for now is to graduate in computer systems and network engineering and to be able to perform in the workplace.",
+		"title5": "Melissa Orellana, student of engineering in computer systems and networks, is a person who likes design very much, this being her main virtue in which she stands out a lot although she has basic knowledge about database administration, networks also about electronics and robotics, she Interested in web layout. Also noteworthy is a person who is passionate about reading books, this being one of his favorite past times. She is a person committed to what she does and wants to train in her career to function in the workplace.",
 		"title6": "publications",
 		"title7": "Below are some of the papers or essays I have contributed to projects.",
 		"title8": "Web Disign",
