--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -21,7 +21,7 @@
 		"title2": "Estudiante de ingenieria en Sistema",
 		"title3": "Sobre mí",
 		"title4": "Melissa Estefania Diaz Orellana",
-		"title5": "Melissa Orellana estudiante de ingenieria en sistemas y redes informáticas, es una persona que le gusta mucho el diseño siendo esta su principal virtud en la cual se destaca bastante aunque tenga conocimientos basicos sobre administracion de base de datos, redes tambien sobre electronica y robotica, le interesa la maquetacion web. Tambien cabe destacar es una persona que le apasiona leer libros siendo este uno de sus pasa tiempos preferidos. Ella es una persona comprometida con lo que hace y quiere formarse en su carrera para desenvolverse en el ámbito laboral.",
+		"title5": "Estudiante de ingenieria en sistemas y redes informáticas, es una persona que le gusta mucho el diseño siendo esta su principal virtud en la cual se destaca bastante aunque tenga conocimientos basicos sobre administracion de base de datos, redes tambien sobre electronica y robotica, le interesa la maquetacion web. Tambien cabe destacar es una persona que le apasiona leer libros siendo este uno de sus pasa tiempos preferidos. Ella es una persona comprometida con lo que hace y quiere formarse en su carrera para desenvolverse en el ámbito laboral.",
 		"title6": "Publicaciones",
 		"title7": "A continuación estarán algunos documentos o ensayos en los que he contribuido para algunos proyectos.",
 		"title8": "Diseño web",
@@ -81,7 +81,7 @@
 		"title2": "Student of System Engineering",
 		"title3": "About me ",
 		"title4": "Melissa Estefania Diaz Orellana",
-		"title5": "Melissa Orellana, student of engineering in computer systems and networks, is a person who likes design very much, this being her main virtue in which she stands out a lot although she has basic knowledge about database administration, networks also about electronics and robotics, she Interested in web layout. Also noteworthy is a person who is passionate about reading books, this being one of his favorite past times. She is a person committed to what she does and wants to train in her career to function in the workplace.",
+		"title5": "Student of engineering in computer systems and networks, is a person who likes design very much, this being her main virtue in which she stands out a lot although she has basic knowledge about database administration, networks also about electronics and robotics, she Interested in web layout. Also noteworthy is a person who is passionate about reading books, this being one of his favorite past times. She is a person committed to what she does and wants to train in her career to function in the workplace.",
 		"title6": "publications",
 		"title7": "Below are some of the papers or essays I have contributed to projects.",
 		"title8": "Web Disign",
