--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -50,7 +50,7 @@
 		"title33": "Teléfono",
 		"title34": "Correo electrónico",
 		"title35": "Envia un mensaje",
-		"Testimonials": "Testimoniales",
+		"Testimonials": "Testimonios",
 		"testimonio1": "Meli es una persona inteligente, amigable con quien puedo contar, responsable a la hora de trabajar y decidida a cumplir con sus metas y objetivos, cuenta con muchas habilidades y entre ella se destaca en el área de diseño.",
 		"uvsText": "Proyecto que esta en proceso de desarrollo, esta es una aplicacion web que su finalidad esta basada en los niños y adolescentes que esten o conoscan alguien que este viviendo maltrato para que dicha app pueda de alguna forma cocientizarlos",
 		"vstHeader": "Una Vida de Seguridad (UVS)",
